<resources>
    <string name="app_name">SpanishWordTest</string>
    <string name="select_mode">モードを選択してください</string>
    <string name="start_test">テストを開始する</string>
    <string name="check_test">問題を確認する</string>

    <string name="test_question_prefix">Q</string>
    <string name="test_question">.かっこ内を埋めなさい。</string>
    <string name="example_spanish">(    ) lavarse las manos antes de comer.</string>
    <string name="example_japanese">食事の前には手を洗わなければならない。</string>
    <string name="input_answer">答えを入力</string>
    <string name="test_previous_button">前へ</string>
    <string name="test_next_button">次へ</string>
    <string name="test_finish_button">終わる</string>

    <string name="result_separator">/</string>
    <string name="result_actual">20</string>
    <string name="result_base">20</string>
    <string name="try_again">もう一度テストする</string>
    <string name="return_test_list">テスト一覧に戻る</string>
    <string name="result_word_spanish">Hay que</string>
    <string name="result_word_japanese">しなければならない</string>
    <string name="result_example_spanish">(Hay que) lavarse las manos antes de comer.</string>
    <string name="result_example_japanese">食事の前には手を洗わなければならない。</string>

    <string name="test_count_alert">試験数は1～99で設定してください。</string>
    <string name="about_app_title">このアプリについて</string>
    <string name="about_app_message">Copyright 2018 Yuta Yamazaki\nVer1.0.0</string>
</resources>
