<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/word_spanish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result_word_spanish"
            android:textColor="@android:color/black"/>

        <TextView
            android:id="@+id/word_japanese"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result_word_japanese"/>
    </LinearLayout>

    <TextView
        android:id="@+id/spanish_example"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/example_spanish"
        android:textColor="@android:color/black"/>
    <TextView
        android:id="@+id/japanese_example"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/example_japanese"/>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />


</LinearLayout>