<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WordTest">

    <TextView
        android:id="@+id/question_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        android:layout_marginTop="45dp"
        android:text="@string/test_question"
        android:textSize="20sp" />
    <TextView
        android:id="@+id/spanish_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        android:layout_marginTop="100dp"
        android:text="@string/example_spanish"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/japanese_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="45dp"
        android:layout_marginEnd="45dp"
        android:layout_marginTop="200dp"
        android:text="@string/example_japanese"
        android:textSize="20sp" />

    <Button
        android:id="@+id/previous_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/question_text"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="250dp"
        android:text="@string/test_previous_button" />

    <Button
        android:id="@+id/next_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/previous_button"
        android:layout_alignEnd="@+id/question_text"
        android:text="@string/test_next_button" />

</RelativeLayout>