<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TestResult">


    <TextView
        android:id="@+id/score_actual"
        android:layout_width="84dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/score_separator"
        android:layout_alignParentStart="true"
        android:layout_marginStart="105dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="0dp"
        android:layout_toStartOf="@+id/score_separator"
        android:text="@string/result_actual"
        android:textColor="@android:color/black"
        android:textSize="50sp" />
    <TextView
        android:id="@+id/score_separator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/result_separator"
        android:textColor="@android:color/black"
        android:textSize="30sp" />
    <TextView
        android:id="@+id/score_base"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/score_separator"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="0dp"
        android:layout_toEndOf="@+id/score_separator"
        android:text="@string/result_base"
        android:textColor="@android:color/black"
        android:textSize="30sp" />


    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="105dp"
        android:entries="@array/result_filter" />

    <LinearLayout
        android:id="@+id/result_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="200dp"
        android:orientation="horizontal"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="142dp"
        android:text="@string/try_again" />

    <Button
        android:id="@+id/button4"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="85dp"
        android:text="@string/check_test" />

    <Button
        android:id="@+id/button5"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="26dp"
        android:text="@string/return_test_list" />

</RelativeLayout>